<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Хрестики-\nнулики</string>
    <string name="first_move">Перший хід</string>
    <string name="your_move">Ваш хід</string>
    <string name="win">Перемоги: </string>
    <string name="lose">Поразки: </string>
    <string name="draw">Нічиї: </string>

    <string name="enter_name">"Введіть, будь ласка, імена"</string>
    <string name="winner">\nпереможець!</string>
    <string name="is_win">Перемога!</string>
    <string name="play_more">Грати ще!</string>
    <string name="your_lose">На жаль, ви програли(((</string>
    <string name="your_draw">Нічия...</string>

    <string name="left_name">Гравець зліва</string>
    <string name="right_name">Гравець справа</string>
    <string name="finish">Готово!</string>

    <string name="your_play_status">Ви граєте за</string>
    <string name="stat">Статистика</string>

    <string name="play_with_bot">Грати\nз телефоном</string>
    <string name="play_with_friend">Грати\nз другом</string>
</resources>