<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FriendActivity">

    <Button
        android:id="@+id/exit_button"
        style="@style/exitButton" />
    <ImageView
        android:id="@+id/top_image"
        style="@style/leftCornImg." />

    <ImageView
        android:id="@+id/down_image"
        style="@style/rightCornImg" />

    <EditText
        android:id="@+id/my_name"
        style="@style/EditTextStyle"
        android:gravity="center"
        android:hint="@string/left_name"
        app:layout_constraintBottom_toTopOf="@+id/friend_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/friend_name"
        style="@style/EditTextStyle"
        android:hint="@string/right_name"
        app:layout_constraintBottom_toTopOf="@+id/complete_Button"
        app:layout_constraintTop_toBottomOf="@+id/my_name" />

    <Button
        android:id="@+id/complete_Button"
        style="@style/RoundButton."
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="40dp"
        android:text="@string/finish"
        android:textSize="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_name" />

</android.support.constraint.ConstraintLayout>